snapshots/syntax/library/functions/interaction/msgbox/msgbox_select_case.snap
---
source: vb6parse/src/syntax/library/functions/interaction/msgbox.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: MsgBox
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"Choose action\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: vbAbortRetryIgnore
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: vbAbort
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: ExitStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: ExitKeyword
                      text: Exit
                    - kind: Whitespace
                      text: " "
                    - kind: SubKeyword
                      text: Sub
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: vbRetry
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "        "
                - kind: CallStatement
                  children:
                    - kind: Identifier
                      text: Retry
                    - kind: Newline
                      text: "\n"
                - kind: Whitespace
                  text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: vbIgnore
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "        "
                - kind: CallStatement
                  children:
                    - kind: Identifier
                      text: Continue
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
        - kind: Newline
          text: "\n"
